--- a/src/styles.css
+++ b/src/styles.css
@@ -16,8 +16,71 @@ body {
   /*
    * CSS image reference example.
    */
-  background-image: url('./images/bg-pattern.png');
+  /* background-image: url('./images/bg-pattern.png'); */
+
+  background-image: url(https://img2.akspic.ru/originals/1/8/8/4/6/164881-tihij_vodoem-vodoem-voda-gora-rastenie-3840x2160.jpg);
 }
-/* .gallery {
+.search-form {
   display: flex;
+  justify-content: center;
+  font-size: 32px;
+}
+form input {
+  border-radius: 8px;
+  border: none;
+}
+.btn {
+  padding: 6px 10px;
+  display: block;
+  margin-left: 15px;
+  border: none;
+  border-radius: 4px;
+  color: #ffffffb7;
+  background-color: rgb(43, 135, 241);
+}
+.button {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+}
+.container {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.photo-card {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+  /* background: #ffffff; */
+  border-radius: 4px;
+  box-shadow: 0px 2px 8px 0px rgba(208, 108, 219, 0.2);
+  margin-right: 15px;
+  /* max-height: 380px; */
+}
+.pgoto-card:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+/* .photo-card:last-child {
+  margin-bottom: 0;
 } */
+.stats {
+  display: flex;
+  justify-content: space-around;
+}
+.image {
+  display: block;
+  width: 480px;
+  height: 360px;
+}
+.stats-item {
+  display: flex;
+  align-items: center;
+}
