--- a/src/templates/card-list.hbs
+++ b/src/templates/card-list.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
 <div class="photo-card">
-    <img src="{{webformatURL}}" alt="{{tags}}" width="480px" class="image" />
+    <img src="{{webformatURL}}" alt="{{tags}}" class="image" />
 
     <div class="stats">
         <p class="stats-item">
