--- a/src/styles.css
+++ b/src/styles.css
@@ -43,6 +43,10 @@ form input {
   margin-left: auto;
   margin-right: auto;
 }
+.button.is-hidden {
+  display: none;
+}
+
 .container {
   width: 100%;
   margin-left: auto;
